@@ -1,0 +1,3 @@
+This contains a single compiled module not stored inside of a Python package.
+
+This reuses the `libextfunc2.dylib` library from the `fakepkg_rpath` wheel.
