@@ -1,0 +1,4 @@
+int extfunc2()
+{
+    return 3;
+}
